@@ -1,7 +1,7 @@
 base  ckgdoku
 author  Myron Turner
 email  turnermm02@shaw.ca
-date 2018-03-15
+date 2018-04-17
 name  ckgdoku
 desc  WYSIWYG plugin for Dokuwiki
 url  https://www.dokuwiki.org/plugin:ckgdoku
